# bongus_trading_bot

./: .gitignore  analytics.py  config.py  continual_optimizer.py  cost_model.py  data_loader.py  data_quality.py  err.txt  execution_alpha.py  feature_engineering.py  fix_funding.py  generate_sample_data.py  get_binance_data.py  get_telegram_id.py  king_watchdog.py  live_trader.py  main.py  modeling.py  out.txt  out2.txt  out3.txt  reliability.py  requirements.txt  risk_engine.py  strategy.py  telegram_alerter.py  test_pandas.py  test_ws.py  walk_forward.py  web_dashboard.py
.continue/: config.yaml  rules.md
.continue/agents/: bug_fixer.agent.md
.continue/mcpServers/: new-mcp-server.yaml
.github/: copilot-instructions.md
data/: funding_rates.parquet
execution_engine/: Cargo.toml  build_err.txt  test_err.txt
execution_engine/src/: binance_rest.rs  binance_ws.rs  collateral_engine.rs  main.rs  order_manager.rs  user_data_ws.rs
tests/: test_cost_model.py  test_data_loader.py  test_risk_execution.py  test_strategy.py  test_walk_forward.py
